--- a/oncourse/templates/account/signup.html
+++ b/oncourse/templates/account/signup.html
@@ -17,7 +17,7 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'msp33p/images/msp_faveicon.ico' %}">
-    <title>MSP Satellite Innovation</title>
+    <title>Online Course</title>
     
     <!-- page css -->
     <link href="{% static 'eliteadmin-2020/css/login-register-lock.css' %}" rel="stylesheet">
@@ -48,7 +48,7 @@
     <div class="preloader">
         <div class="loader">
             <div class="loader__figure"></div>
-            <p class="loader__label">MSP Satellite Innovation</p>
+            <p class="loader__label">Online Course</p>
         </div>
     </div>
     <!-- ============================================================== -->
